# FIT-PA2_semestral

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  Doxyfile  Makefile  README.md  prohlaseni.txt  zadani.txt
examples/: mapTall.txt  mapWide.txt  progtestMap.txt
examples/config/: attackerEffects.json  attackers.json  gameConfig.json  towerEffects.json  towers.json
examples/saveFiles/: save1.json  save2.json  save3.json
examples/tests/mapLoading/: differentDimension.txt  missingHeight.txt  missingWallBegin.txt  missingWallBottom.txt  missingWallEnd.txt  missingWallTop.txt  missingWidth.txt  wrongDimension.txt
src/: app.cpp  app.h  armorBuffEffect.cpp  armorBuffEffect.h  attacker.cpp  attacker.h  attackerEffect.cpp  attackerEffect.h  attackerEffectsFactory.cpp  attackerEffectsFactory.h  attackerFactory.cpp  attackerFactory.h  burnEffect.cpp  burnEffect.h  configLoader.cpp  configLoader.h  freezeEffect.cpp  freezeEffect.h  game.cpp  game.h  handlePlayerInput.cpp  handlePlayerInput.h  healingEffect.cpp  healingEffect.h  main.cpp  map.cpp  map.h  mapLoading.cpp  mapLoading.h  node.h  pathFinding.cpp  pathFinding.h  screen.cpp  screen.h  speedBoostEffect.cpp  speedBoostEffect.h  stats.h  tower.cpp  tower.h  towerEffect.h  (+6 more)
